# rust-auth

./: Cargo.toml
authentication/: Cargo.toml
authentication/src/: main.rs
authentication/src/application/server/: health_handler.rs
authentication/src/domain/: hasher.rs  mod.rs  password.rs  user.rs  user_repo.rs
authentication/src/infrastructure/crypto/: hasher.rs
authentication/src/infrastructure/db/postgres/: config.rs  mod.rs  user_repo.rs
authentication/src/infrastructure/db/postgres/migrations/: 000001_create_authn_user.sql
src/: main.rs
src/db/: pg.rs
src/infrastructure/db/postgres/: config.rs
