[package]
authors = ["francoposa <franco@francoposa.io>"]
edition = "2018"
name = "rust-auth"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-rt = "1"
actix-web = "3"
async-trait = "0.1"
chrono = "0.4"
sodiumoxide = "0.2.6"
sqlx = {version = "0.4.2", features = ["runtime-actix-rustls", "postgres", "chrono", "uuid"]}
uuid = { version = "0.8", features = ["serde", "v4"] }
